<resources>
    <string name="app_name">iKidz</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="default_notification_channel_id">iKidz</string>


    <string name="toolbar_title_newsfeed">BẢNG TIN</string>
    <string name="toolbar_title_school">NHÀ TRƯỜNG</string>
    <string name="toolbar_title_contacts">SỔ LIÊN LẠC</string>
    <string name="toolbar_title_phonebooks">DANH BẠ</string>
    <string name="toolbar_title_message">TIN NHẮN</string>

    <string name="title_newsfeed">Bảng tin</string>
    <string name="title_school">Nhà trường</string>
    <string name="title_contacts">Sổ liên lạc</string>
    <string name="title_phonebooks">Danh bạ</string>
    <string name="title_message">Tin nhắn</string>

    <string name="title_today">HÔM NAY</string>
    <string name="title_future">SẮP TỚI</string>
    <string name="title_all">TẤT CẢ</string>

    <string name="title_week_1">Tuần 1</string>
    <string name="title_week_2">Tuần 2</string>
    <string name="title_week_3">Tuần 3</string>
    <string name="title_week_4">Tuần 4</string>

    <string name="title_subscribe_eat">ĐĂNG KÝ ĂN</string>
    <string name="title_log_eat">NHẬT KÝ ĂN</string>

    <string name="message_back_press_to_exit">Nhấn back lần nữa để thoát app</string>
    <string name="message_permission_needed">Vui lòng cấp quyền để ứng dụng có thể hoạt động chính xác.</string>
    <string name="message_loading">Loading…</string>
    <string name="mesage_loading_data">Đang tải dữ liệu...</string>
    <string name="message_can_not_request">Không thể kết nối tới máy chủ. Vui lòng thử lại sau!</string>
    <string name="action_select_non_data_province">Không có dữ liệu tỉnh thành</string>
    <string name="action_select_non_data_district">Không có dữ liệu quận huyện</string>
    <string name="action_select_non_data_school">Không có dữ liệu trường học</string>
    <string name="action_select_province">Chọn tỉnh thành</string>
    <string name="action_select_district">Chọn quận huyện</string>
    <string name="action_select_school">Chọn trường</string>
    <string name="tv_user_email_recovery">Email khôi phục…</string>
    <string name="tv_user_name">Tài khoản…</string>
    <string name="tv_user_pass">Mật khẩu…</string>
    <string name="tv_forgot_pass">Quên mật khẩu?</string>
    <string name="validate_field_province">Vui lòng chọn tỉnh thành.</string>
    <string name="validate_field_district">Vui lòng chọn quận huyện.</string>
    <string name="validate_field_school">Vui lòng chọn trường.</string>
    <string name="validate_field_user_name_pass">Vui lòng không để trống tài khoản và mật khẩu.</string>
    <string name="mesage_login_data">Đang đăng nhập...</string>
    <string name="message_login_success">Đăng nhập thành công!</string>
    <string name="error_network">Không có kết nối mạng. Vui lòng kiểm tra và thử lại!</string>
    <string name="mesage_no_data_news">Không có dữ liệu tin tức!</string>
    <string name="mesage_no_data">Dữ liệu trống. Vui lòng thử lại sau!</string>
    <string name="title_edit_profile">Sửa thông tin cá nhân</string>
    <string name="action_select_image">Chọn ảnh</string>
    <string name="action_update_profile">Cập nhật</string>
    <string name="validate_field_password_too_shot">Mật khẩu phải từ 6 ký tự trở lên</string>
    <string name="error_email_invalid">Email không đúng định dạng. Vui lòng kiểm tra lại!</string>
    <string name="error_email_not_exists">Email không tồn tại. Vui lòng kiểm tra lại Email.</string>


</resources>
